apps/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cigna-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx

  rules:
    - host: cigna.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cigna-nginx-service
                port:
                  number: 80

  tls:
    - hosts:
        - cigna.local
      secretName: cigna-tls
